--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@monaco-editor/react": "^4.6.0",
+    "@react-three/drei": "^9.89.0",
+    "@react-three/fiber": "^8.15.11",
+    "@types/three": "^0.159.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "framer-motion": "^10.16.9",
     "monaco-editor": "^0.44.0",
     "prop-types": "^15.8.1",
@@ -20,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
+    "three": "^0.159.0",
     "uid": "^2.0.2"
   },
   "devDependencies": {
